# asHub

./: .gitignore  README.md  README_CN.md  electron-builder.yml  install.sh  package-lock.json  package.json
.github/workflows/: build-mac.yml  build-win.yml  build.yml  release.yml
docs/: remote-ssh.md
electron/: icon.icns  main.cjs  preload.cjs
scripts/: build-server-bundle.mjs  build-server-tarballs.mjs  fetch-node-sidecar.sh  gen-release-json.sh  pre-dist-win.sh  stage-tauri-resources.sh
src/: cli.ts  hub.ts
src-tauri/: Cargo.toml  inject.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/bridges/: acp.ts  agent-shell.ts  ash.ts  fake.ts  remote.ts  terminal.ts  types.ts
src/history/: capture.ts  compaction-strategy.ts  multi-session-store.ts  session-store.ts  summarize.ts
src/remote/: registry.ts  ssh.ts  types.ts
web/: index.html
web/css/: live.css  styles.css  toast.css
web/js/: actions.js  autocomplete.js  client.js  composer.js  config-panel.js  context-panel.js  export.js  files-panel.js  focus-trap.js  i18n.js  infinite-scroll.js  lifecycle.js  math.js  no-session.js  panel-manager.js  prefs.js  prompt-manager.js  session-manager.js  session-switcher.js  session-view.js  shortcuts.js  sidebar.js  skills-panel.js  sse.js  state.js  store.js  subagent-panel.js  tabs.js  terminal-view.js  toast.js  tree-panel.js  utils.js
web/js/stream/: compact.js  idle-work.js  live-output.js  renderers.js  reply.js  scroll.js  shell-block.js  thinking.js  todo-block.js  tool-group.js
